creating some design

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <title>Interacting with the Browser</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <h2>Interacting with the Browser Object Model</h2>
   <body>
     <div id="app"></div>
     <p class="message">Start guessing...</p>
-    <script src="script.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
